@@ -2,6 +2,8 @@ What's new in ZODB3 3.5a0?
 ==========================
 Release date: DD-MMM-YYYY
 
+A ``getBeforeCommitHooks()`` method has been added to Transaction. It
+returns an iterable producing the registered beforeCommit hooks.
 
 What's new in ZODB3 3.4a5?
 ==========================
